# VIO_Initializor

./: CMakeLists.txt  README copy.md  README.md  run.sh
src/: CMakeLists.txt  ins.cpp  ins.h  ins_log.cpp  ins_log.h  vio.cpp  vio.h  vio_config.cpp  vio_config.h
src/backend/: CMakeLists.txt  backend.h  backend_data_process.cpp  backend_log.cpp  backend_log.h  backend_main.cpp
src/backend/graph_manager/: backend_graph_manager.cpp
src/backend/initializor/: backend_initializor.cpp  backend_initializor_steps.cpp  initializor_visual_only.cpp
src/backend_drt_vio_init/: CMakeLists.txt  backend.h  backend_data_process.cpp  backend_main.cpp
src/backend_drt_vio_init/initializor/: initializor.cpp  initializor_estimate_bias_gyro.cpp  initializor_estimate_velocity_and_gravity.cpp
src/backend_vins_mono/: CMakeLists.txt  backend.h  backend_data_process.cpp  backend_main.cpp
src/backend_vins_mono/initializor/: initializor.cpp  initializor_visual_only.cpp
src/data_loader/: CMakeLists.txt  data_loader.cpp  data_loader.h  data_loader_log.cpp  data_loader_log.h
src/data_manager/: CMakeLists.txt  data_manager.cpp  data_manager.h  data_manager_log.cpp  data_manager_log.h  data_manager_self_check.cpp  data_manager_visualize.cpp
src/frontend/: CMakeLists.txt  visual_frontend.h
src/imu_manager/: CMakeLists.txt  imu_manager.cpp  imu_manager.h  imu_manager_log.cpp  imu_manager_log.h
src/sensor_manager/: CMakeLists.txt  sensor_manager.cpp  sensor_manager.h
test/: test_locator.cpp  test_pure_imu.cpp  test_vio.cpp  test_vio_initializor.cpp
